Fix bottom page spacing issue

--- a/src/app/components/launch-card/launch-card.component.css
+++ b/src/app/components/launch-card/launch-card.component.css
@@ -20,10 +20,6 @@
   width: 400px;
 }
 
-.card:last-child {
-  margin-bottom: 30px;
-}
-
 .image {
   height: 300px;
   width: 100%;
