--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,10 @@ html {
   background-size: cover;
 }
 
+body {
+  padding-bottom: 30px;
+}
+
 ul {
   list-style-type: none;
 }
